# Codeforces-Solutions

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.sh  test.sh.save
contests/Div3/Contest_0000/A/: A.cpp
contests/Practice/A/4A/: Watermelon.cpp
template/: template_single.cpp  template_tc.cpp
