cmake_minimum_required(VERSION 3.16)
project(CodeforcesSolutions LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_compile_options(-O2 -Wall -Wextra -Wshadow -Wconversion)

file(GLOB_RECURSE CF_SOURCES CONFIGURE_DEPENDS "contests/*.cpp")
foreach(SRC ${CF_SOURCES})
    get_filename_component(NAME_WE ${SRC} NAME_WE)
    string(REPLACE "${CMAKE_SOURCE_DIR}/" "" RELPATH ${SRC})
    string(REPLACE "/" "_" TARGET_NAME ${RELPATH})
    string(REPLACE ".cpp" "" TARGET_NAME ${TARGET_NAME})
    add_executable(${TARGET_NAME} ${SRC})
endforeach()